--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
         <h2>About Us</h2>
         <p>The Jam Box is an South Australian owned and operated business that specializes in handmade jams and preserves. Our products are made with only the freshest and highest quality ingredients, all of which are sourced locally as we take pride in our commitment to supporting local farmers and growers.</p>
         <p>We are revolutionising the Jam Industry right here in the heart of Adelaide, giving customers an opportunity to experience our Jams through tastings as well as giving customers the opportunity to get limited edition unique flavours delivered to their door each and every month.</p>
+        <p>We sells standard jams and unique jams, some of which use native ingredients and others which use new ingredient combinations. We also have a one of a kind subscription service called "Jam of the month (JOTM)" which deliver tailored boxes of three jams (2 of the customers choice and 1 limited JOTM Jam to customers) each and every month. These unique JOTM jams are never available for purchase, as they are only produced to supply the members for a particular month.</p>
+        <p>We also have Jam Tastings which allow customers to try our Jams, preserves and Jam cakes.</p>
       </section>
 
       
